syntax = "proto3";
package libp2p;

message PeerId {
  bytes data = 1;
}

